--- a/compose.yaml
+++ b/compose.yaml
@@ -1,20 +1,57 @@
-services: 
-  jupyterlab: 
+services:
+
+  jupyterlab:
+
     image: contransimage
+
     env_file:
+
       - .env
+
     ports:
+
       - "8890:8888"
+
     volumes:
+
       - ./:/contrans2023
+
       - ./settings.txt:/root/.jupyter/lab/user-settings/@jupyterlab/notebook-extension/tracker.jupyterlab-settings
-  postgres: 
-    image: postgres:latest 
-    env_file: 
+
+    networks:
+
+      - dbnetwork
+
+      
+
+  postgres:
+
+    image: postgres:latest
+
+    env_file:
+
       - .env
-    ports: 
-      - "5432:5432" 
-    volumes: 
+
+    ports:
+
+      - "5432:5432"
+
+    volumes:
+
       - postgresdata:/var/lib/postgresql/data
-volumes: 
+
+    networks:
+
+      - dbnetwork
+
+ 
+
+volumes:
+
   postgresdata:
+
+ 
+
+networks:
+
+  dbnetwork:
